--- a/style.css
+++ b/style.css
@@ -7,20 +7,20 @@
     }
 
     .background {
-        background-color: #36384D; /* Cor de fundo azul Marinho */
-        width: 100vw; /* Largura da div */
-        height: 100vh; /* Altura da div */
-        padding: 20px; /* Espaçamento interno */
-        box-sizing: border-box; /* Para incluir preenchimento e borda na largura e altura total */
+        background-color: #36384D;
+        width: 100vw; 
+        height: 100vh;
+        padding: 20px;
+        box-sizing: border-box;
     }
 
     .background_form {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        gap: 45px;
+        gap: 35px;
         background-color: #fff;
-        width: 49vw; /* Exemplo de largura relativa */
-        height: 55vh; /* Exemplo de altura em relação à altura do viewport */
+        width: 49vw;
+        height: 79vh;
         padding: 20px;
         border-radius: 30px;
         position: absolute;
@@ -32,19 +32,19 @@
 
     .left_column {
         width: 24vw;
-        height: 79vh;/* Define a largura da .left_column em relação à largura do .background_form */
-        margin-left: 5%; /* Define a margem esquerda em relação à largura do .background_form */
+        height: 79vh;
+        margin-left: 5%;
     }
 
     .right_column {
-        width: 24vw; /* Defina a largura desejada para a coluna esquerda */
+        width: 24vw;
         height: 79vh;   
         justify-self: end; 
     }
 
     svg {
-        width: 100%; /* Defina a largura do SVG como 100% da largura da coluna esquerda */
-        height: 100%; /* Para manter a proporção do SVG */
+        width: 100%;
+        height: 100%;
     }
 
     .title {
@@ -92,7 +92,7 @@
 
     .form {
         width: 100%;
-        bottom: 60px; /* Alinha o formulário à base da div pai */
+        bottom: 60px;
         margin-top: 5%;
     }
 
